[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uapi"
version = "23.1.0.dev0"
description = "A Python HTTP superframework"
authors = [{name = "Tin Tvrtkovic", email = "tinchester@gmail.com"}]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["cattrs >= 22.2.0", "incant >= 22.2.2", "itsdangerous", "attrs >= 23.1.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[tool.pdm.dev-dependencies]
lint = [
    "black",
    "flake8",
    "isort",
    "mypy",
]
test = [
    "coverage",
    "pytest-asyncio",
    "httpx",
    "aiohttp",
    "flask",
    "quart",
    "starlette",
    "django",
    "hypercorn",
    "aioredis==1.3.1",
    "uvicorn",
    "orjson",
]
docs = [
    "sphinx",
    "furo",
    "myst_parser",
    "sphinx_inline_tabs"
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
skip_magic_trailing_comma = true

[tool.mypy]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aioredis.*"
ignore_missing_imports = true

[tool.coverage.run]
parallel = true
source_pkgs = ["uapi"]
